# nrf-embedded-test

./: Cargo.toml  build.ps1  build.rs
.cargo/: config.toml
src/: main.rs
tests/: example_test.rs
